--- a/templates/projects/task_n_answers.html
+++ b/templates/projects/task_n_answers.html
@@ -5,6 +5,7 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
+    
 {% if project %}
 {{ render_local_nav(current_user, "redundancy", project.short_name) }}
 <div class="container-padded">
@@ -12,24 +13,25 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                        {{ helper.render_project_title(project, subtitle="Task Redundancy") }}
-                        <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('project.task_n_answers', short_name=project.short_name) }}">
-                            {{ form.hidden_tag() }}
-                            <fieldset>
-                                {{ render_field(form.n_answers, class_="input-block-level form-control", placeholder="The number of contributions required per task", type="number", autofocus="autofocus", required="required", pattern=".{1,100}", title="Must be a number between 1 and 100") }}
-                                <div class="pull-right" role="group">
-                                    <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">Cancel</a>
-                                    <input type="submit" value="Set redundancy" class="btn btn-danger" />
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div><!-- col-sm-9 -->
-                </div>
-                {% else %}
-                  <div class="page-header">
-                      <h1>Sorry! This project does not exist.</h1>
-                  </div>
-                {% endif %}
+                {{ helper.render_project_title(project, subtitle="Task Redundancy") }}
+                <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('project.task_n_answers', short_name=project.short_name) }}">
+                    {{ form.hidden_tag() }}
+                    <fieldset>
+                        {{ render_field(form.n_answers, class_="input-block-level form-control", placeholder="The number of contributions required per task", type="number", autofocus="autofocus", required="required", pattern=".{1,100}", title="Must be a number between 1 and 100") }}
+                        <div class="pull-right" role="group">
+                            <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">Cancel</a>
+                            <input type="submit" value="Set redundancy" class="btn btn-danger">
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
         </div>
+    </div>
 </div>
+{% else %}
+  <div class="page-header">
+      <h1>Sorry! This project does not exist.</h1>
+  </div>
+{% endif %}
+   
 {% endblock %}
