--- a/templates/blog/_helpers.html
+++ b/templates/blog/_helpers.html
@@ -67,7 +67,7 @@
             </article>
             <hr>
         {% else %}
-        <div class="page-header">
+        <div class="page-header padding-top container">
             <h1>Sorry! This blogpost does not exist.</h1>
         </div>
     {% endif %}
