--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -131,7 +131,7 @@
 </div>
 
 {% else %}
-<div class="page-header">
+<div class="page-header padding-top container">
     <h1>Sorry! This project does not exist.</h1>
 </div>
 {% endif %}
