--- a/templates/projects/blproject.html
+++ b/templates/projects/blproject.html
@@ -219,7 +219,7 @@
         <div class="container-padded remove-padding-bottom">
             <section class="white">
                 <div class="container container-padded">
-                    <div class="page-header">
+                    <div class="page-header padding-top container">
                         <h1>Sorry! This project does not exist.</h1>
                     </div>
                 </div>
