--- a/templates/projects/task_priority.html
+++ b/templates/projects/task_priority.html
@@ -35,7 +35,7 @@
 </div>
 
 {% else %}
-<div class="page-header">
+<div class="page-header padding-top container">page-header padding-top container
     <h1>Sorry! This project does not exist.</h1>
 </div>
 {% endif %}
