--- a/templates/projects/task_scheduler.html
+++ b/templates/projects/task_scheduler.html
@@ -37,7 +37,7 @@
     </div>
 </div>
 {% else %}
-<div class="page-header">
+<div class="page-header padding-top container">
     <h1>Sorry! This project does not exist.</h1>
 </div>
 {% endif %}
