--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -98,6 +98,15 @@
                     </a>
                 </div>
                 
+                <div id="task_investigation" class="col-sm-6 col-md-4">
+                    <a href="{{ url_for('data/project.investigate', short_name=project.short_name) }}" rel="nofollow">
+                    <div class="well">
+                            <i class="fa fa-search fa-4x"></i>
+                            <h3 class="margin-bottom-xs">Investigate Tasks</h3>
+                        </div>
+                    </a>
+                </div>
+                
                 <div id="delete_project" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.delete', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
