--- a/templates/stats/blglobal.html
+++ b/templates/stats/blglobal.html
@@ -52,6 +52,23 @@
                     </div>
                 </div>
                 
+                <div class="row padding-bottom-sm">
+                    <div class="col-xs-12">
+                        <div class="white-rounded inset-shadow-white chart">
+                            <h3 class="text-center">Volunteers have come from {{n_countries}} countries and {{n_cities}} cities</h3>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row padding-bottom-sm">
+                    <div class="col-xs-12">
+                        <div class="white-rounded inset-shadow-white text-center chart">
+                            <h4 class=" padding-bottom-sm">Locations of Active Volunteers</h4>
+                            <div id="map" style="height:480px;"></div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="row padding-bottom-sm" id="task-date-row">
                     <div class="col-xs-12">
                         <div class="white-rounded inset-shadow-white chart">
@@ -131,25 +148,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="row padding-bottom-sm">
-                    <div class="col-xs-12">
-                        <div class="white-rounded inset-shadow-white chart">
-                            <h4 class="text-center padding-bottom-sm">Total Hourly Activity</h4>
-                            <div id="hourly-chart">
-                                <canvas id="hourly" style="max-height:300px;"></canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="row padding-bottom-sm">
-                    <div class="col-xs-12">
-                        <div class="white-rounded inset-shadow-white text-center chart">
-                            <h4 class=" padding-bottom-sm">Locations of Active Volunteers</h4>
-                            <div id="map" style="height:480px;"></div>
-                        </div>
-                    </div>
-                </div>
                 
                 <div class="row padding-bottom-sm">
                     <div class="col-xs-12">
@@ -157,6 +155,17 @@
                             <h4 class="text-center padding-bottom-sm">Percentage of Contributions per User</h4>
                             <div id="contributions-per-user-chart">
                                 <canvas id="contributions-per-user" style="max-height:300px;"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row padding-bottom-sm">
+                    <div class="col-xs-12">
+                        <div class="white-rounded inset-shadow-white chart">
+                            <h4 class="text-center padding-bottom-sm">Total Hourly Activity</h4>
+                            <div id="hourly-chart">
+                                <canvas id="hourly" style="max-height:300px;"></canvas>
                             </div>
                         </div>
                     </div>
