--- a/templates/stats/blglobal.html
+++ b/templates/stats/blglobal.html
@@ -45,7 +45,7 @@
                             <div id="top-users-alltime-chart">
                                 <canvas id="top-users-alltime" style="max-height:300px;"></canvas>
                             </div>
-                            <div class="text-center padding-top-xs text-center">
+                            <div class="text-center padding-top-xs">
                                 <a class="btn btn-danger" href="{{url_for('leaderboard.index')}}">View Leaderboard</a>
                             </div>
                         </div>
@@ -76,6 +76,22 @@
                             <div id="top-countries-chart">
                                 <canvas id="top-countries" style="max-height:300px;"></canvas>
                             </div>
+                            <div class="text-center padding-top-xs padding-bottom-sm">
+                                <a class="btn btn-danger" href="#all-countries" data-toggle="collapse" aria-expanded="false" aria-controls="all-countries">View All Countries</a>
+                            </div>
+                            <div id="all-countries" class="collapse">
+                                <table class="table table-stripped table-condensed table-hover table-responsive">
+                                    <thead>
+                                        <tr>
+                                            <th class="text-center">Country</th>
+                                            <th class="text-center">Contributions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="top-countries-table">
+                                        <!-- Insert from JavaScript-->
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,7 +108,7 @@
                 </div>
                 
                 <div class="row" id="top-5-row">
-                    <div class="col-sm-6 col-xs-12 padding-bottom-sm">
+                    <div class="col-xs-12 padding-bottom-sm">
                         <div class="white-rounded inset-shadow-white chart">
                             <h4 class="text-center padding-bottom-sm">Top Volunteers This Week</h4>
                             <div id="top-users-chart">
@@ -102,7 +118,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-xs-12 padding-bottom-sm">
+                    <div class="col-xs-12 padding-bottom-sm">
                         <div class="white-rounded inset-shadow-white chart">
                             <h4 class="text-center padding-bottom-sm">Top Projects This Week</h4>
                             <div id="top-projects-chart">
@@ -113,6 +129,7 @@
                         </div>
                     </div>
                 </div>
+                
                 
                 <div class="row padding-bottom-sm" id="users-daily-row">
                     <div class="col-xs-12">
@@ -526,10 +543,19 @@ $(function(){
         
     {% if top_countries %}
     //Top countries
-    var task_runs = {{top_countries|safe}}['n_task_runs'];
-    console.log(highScore);
+    
+    var all_countries = {{top_countries|safe}}['countries'];
+    var all_contributions = {{top_countries|safe}}['n_task_runs'];
+    var table = '';
+    $.each(all_countries, function(i){
+        table = table + '<tr><td class="text-center">' + all_countries[i] +
+        '</td><td class="text-center">' + all_contributions[i] +
+        '</td></tr>';
+    });
+    $('#top-countries-table').html(table);
+    
     var data = {
-        labels: {{top_countries|safe}}['countries'],
+        labels: all_countries.slice(0,4),
         datasets: [
             {
                 label: "Top Countries of All Time",
@@ -537,7 +563,7 @@ $(function(){
                 strokeColor: "rgba(151,187,205,1)",
                 highlightFill: "rgba(151,187,205,0.1)",
                 highlightStroke: "rgba(151,187,205,1)",
-                data: task_runs
+                data: all_contributions.slice(0,4)
             }
         ]
     };
