--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -71,6 +71,15 @@
                     </a>
                 </div>
                 
+                <div id="investigate_tasks" class="col-sm-6 col-md-4">
+                    <a href="{{url_for('data/project.investigate', short_name=project.short_name)}}" rel="nofollow">
+                            <div class="well">
+                                    <i class="fa fa-search-o fa-4x"></i>
+                                    <h3 class="margin-bottom-xs">Investigate</h3>
+                            </div>
+                    </a>
+                </div>
+                
                 <div id="task_redundancy" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
