--- a/templates/projects/task_autoimport_options.html
+++ b/templates/projects/task_autoimport_options.html
@@ -27,6 +27,16 @@
                     {% endfor %}
                 </div>
                 {% endfor %}
+                <div class="row">
+                    <div class="col-sm-4">
+                        <a href="{{url_for(data/project.ambiguous_auto_importer, short_name=project.short_name, type='ambiguous')}}" rel="nofollow">
+                            <div class="well">
+                                <i class="fa fa-search fa-4x"></i>
+                                <h3 class="margin-bottom-xs">Ambiguous Contributions</h3> 
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
