--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -100,9 +100,19 @@
                 
                 <div id="task_investigation" class="col-sm-6 col-md-4">
                     <a href="{{ url_for('data/project.investigate', short_name=project.short_name) }}" rel="nofollow">
-                    <div class="well">
+                        <div class="well">
                             <i class="fa fa-search fa-4x"></i>
                             <h3 class="margin-bottom-xs">Investigate Tasks</h3>
+                        </div>
+                    </a>
+                </div>
+                
+                
+                <div id="task_investigation" class="col-sm-6 col-md-4">
+                    <a href="{{url_for('data/project.ambiguous_autoimporter', type='ambiguous')}}" rel="nofollow">
+                        <div class="well">
+                            <i class="fa fa-cogs fa-4x"></i>
+                            <h3 class="margin-bottom-xs">Auto Import Ambiguous Tasks</h3> 
                         </div>
                     </a>
                 </div>
