--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -109,7 +109,7 @@
                 
                 
                 <div id="task_investigation" class="col-sm-6 col-md-4">
-                    <a href="{{url_for('data/project.ambiguous_autoimporter', type='ambiguous')}}" rel="nofollow">
+                    <a href="{{url_for('data/project.ambiguous_autoimporter', type='ambiguous', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
                             <i class="fa fa-cogs fa-4x"></i>
                             <h3 class="margin-bottom-xs">Auto Import Ambiguous Tasks</h3> 
