--- a/templates/projects/task_autoimporter.html
+++ b/templates/projects/task_autoimporter.html
@@ -13,7 +13,10 @@
                 {% include "_flash_messages.html" %}
                 {{ helper.render_loading(loading_text) }}
                 <h1><strong>{{project.name}}</strong>: Auto Importer Configured</h1>
-                <h2>You currently have the following auto-importer configured</h2>
+                <h3>You currently have the following auto-importer configured</h3>
+                
+                <hr />
+                
                 {% if importer['type']=='epicollect' %}
                 <p><strong>Type: </strong>Epicollect</p>
                 <p><strong>Epicollect project: </strong>{{ importer['epicollect_project'] }}</p>
@@ -30,7 +33,9 @@
                 {% elif importer['type']=='ambiguous'%}
                 <p><strong>Type: </strong><a href="{{url_for('data/project.ambiguous_autoimporter', short_name=project.short_name)}}">Ambiguous Data importer</a></p>
                 {% endif %}
-        
+                
+                <hr />
+                
                 {% if importer['type']=='ambiguous' %}
                 <form class="form-horizontal" method="post" action="{{ url_for('project.delete_autoimporter', short_name=project.short_name) }}">
                 {% else %}
@@ -39,7 +44,7 @@
                     <fieldset>
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                         <div class="pull-right form-actions" role="group">
-                            <a href="{{ url_for('project.tasks', short_name=project.short_name) }}">Back</a>
+                            <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">Back</a>
                             <input id="submit" type="submit" value="Delete" class="btn btn-danger" />
                         </div>
                     </fieldset>
