--- a/templates/account/email/base.html
+++ b/templates/account/email/base.html
@@ -27,9 +27,7 @@
         </div>
         <footer>
             <div style="text-align:center;">
-                <p>Powered by <a href="http://pybossa.com">PyBossa</a></p>
-                <p>Follow us: <a href="http://twitter.com/pybossa">Twitter</a>, <a
-                    href="https://plus.google.com/115359083217638640334/posts">Google+</a></p>
+                <p>Follow us on <a href="http://twitter.com/LibCrowds">Twitter</a></p>
             </div>
         </footer>
     </body>
