--- a/templates/projects/tasks_browse.html
+++ b/templates/projects/tasks_browse.html
@@ -13,7 +13,7 @@
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
                 {{ helper.render_project_title(project, upload_method, subtitle="Browse tasks") }}
-                <h3>The project contains {{tasks|length}} tasks<h3>
+                <h3>The project contains {{n_tasks}} tasks</h3>
                 {% for t in tasks %}
                 {% set task_pct = t.pct_status*100 %}
                 <div class="row vcenter hcenter padding-top-xs">
