--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -2,15 +2,15 @@
 
 {% macro render_admin_user(user) %}
 <tr>
-    <td>{{user.fullname}}</td>
-    <td class="hidden-xs">{{user.name}}</td>
-    <td class="hidden-xs" style="text-align:center;">{{user.created[8:10]}}-{{user.created[5:7]}}-{{user.created[0:4]}}</td>
+    <td>{{user.name}}</td>
+    <td class="hidden-xs">{{user.fullname}}</td>
+    <td class="hidden-xs text-center">{{user.created[8:10]}}-{{user.created[5:7]}}-{{user.created[0:4]}}</td>
     {% if user.admin %}
-        <td style="text-align:center;">{% if user.id != 1 %}<a href="{{url_for('admin.del_admin', user_id=user.id)}}" class="btn btn-inverse">
-            <i class="glyphicon glyphicon-remove"></i>  Revoke admin rights</a>{% else %}N/A{% endif %}</td>
+        <td class="text-center">{% if user.id != 1 %}<a href="{{url_for('admin.del_admin', user_id=user.id)}}" class="btn btn-inverse">
+            <i class="fa fa-remove"></i>  Revoke admin rights</a>{% else %}N/A{% endif %}</td>
     {% else %}
-        <td  style="text-align:center;"><a href="{{url_for('admin.add_admin', user_id=user.id)}}" class="btn btn-inverse">
-            <i class="glyphicon glyphicon-plus"></i> Grant admin rights</a></td>
+        <td class="text-center"><a href="{{url_for('admin.add_admin', user_id=user.id)}}" class="btn btn-inverse">
+            <i class="fa fa-plus"></i> Grant admin rights</a></td>
     {% endif %}
 </tr>
 {% endmacro %}
