--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -21,7 +21,7 @@
                 <div id="import_tasks" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.import_task', short_name=project.short_name)}}" rel="nofollow">
                     <div class="well  ">
-                            <i class="fa fa-download fa-4x"></i> 
+                            <span class="fa fa-download fa-4x"></span> 
                             <h3 class="margin-bottom-xs">Import Tasks</h3>
                     </div>
                     </a>
@@ -29,7 +29,7 @@
                 <div id="export_tasks" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.export_to', short_name=project.short_name)}}" rel="nofollow">
                             <div class="well  ">
-                                    <i class="fa fa-upload fa-4x"></i>
+                                    <span class="fa fa-upload fa-4x"></span>
                                     <h3 class="margin-bottom-xs">Export Tasks</h3>
                             </div>
                     </a>
@@ -38,7 +38,7 @@
                 <div id="autoimport_tasks" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.setup_autoimporter', short_name=project.short_name)}}" rel="nofollow">
                             <div class="well  ">
-                                    <i class="fa fa-cogs fa-4x"></i>
+                                    <span class="fa fa-cogs fa-4x"></span>
                                     <h3 class="margin-bottom-xs">Auto-import Tasks</h3>
                             </div>
                     </a>
@@ -47,7 +47,7 @@
                 <div id="task_presenter" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.task_presenter_editor', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-edit fa-4x"></i>
+                            <span class="fa fa-edit fa-4x"></span>
                             <h3 class="margin-bottom-xs">Task Presenter</h3>
                         </div>
                     </a>
@@ -56,7 +56,7 @@
                 <div id="task_browse" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.tasks_browse', short_name=project.short_name)}}" rel="nofollow">
                     <div class="well">
-                            <i class="fa fa-list-alt fa-4x"></i>
+                            <span class="fa fa-list-alt fa-4x"></span>
                             <h3 class="margin-bottom-xs">Browse Tasks</h3>
                         </div>
                     </a>
@@ -65,7 +65,7 @@
                 <div id="task_delete" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.delete_tasks', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-trash-o fa-4x"></i>
+                            <span class="fa fa-trash-o fa-4x"></span>
                             <h3 class="margin-bottom-xs">Delete Tasks</h3>
                         </div>
                     </a>
@@ -74,7 +74,7 @@
                 <div id="investigate_tasks" class="col-sm-6 col-md-4">
                     <a href="{{url_for('data/project.investigate', short_name=project.short_name)}}" rel="nofollow">
                             <div class="well">
-                                    <i class="fa fa-search-o fa-4x"></i>
+                                    <span class="fa fa-search-o fa-4x"></span>
                                     <h3 class="margin-bottom-xs">Investigate</h3>
                             </div>
                     </a>
@@ -83,7 +83,7 @@
                 <div id="task_redundancy" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-repeat fa-4x"></i>
+                            <span class="fa fa-repeat fa-4x"></span>
                             <h3 class="margin-bottom-xs">Task Redundancy</h3>
                         </div>
                     </a>
@@ -92,7 +92,7 @@
                 <div id="task_priority" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.task_priority', short_name=project.short_name)}}" rel="nofollow">
                     <div class="well">
-                            <i class="fa fa-sort-numeric-asc fa-4x"></i>
+                            <span class="fa fa-sort-numeric-asc fa-4x"></span>
                             <h3 class="margin-bottom-xs">Task Priority</h3>
                         </div>
                     </a>
@@ -101,7 +101,7 @@
                 <div id="task_scheduler" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.task_scheduler', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-filter fa-4x"></i>
+                            <span class="fa fa-filter fa-4x"></span>
                             <h3 class="margin-bottom-xs">Task Scheduler</h3>
                         </div>
                     </a>
@@ -110,7 +110,7 @@
                 <div id="task_investigation" class="col-sm-6 col-md-4">
                     <a href="{{ url_for('data/project.investigate', short_name=project.short_name) }}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-search fa-4x"></i>
+                            <span class="fa fa-search fa-4x"></span>
                             <h3 class="margin-bottom-xs">Investigate Tasks</h3>
                         </div>
                     </a>
@@ -120,7 +120,7 @@
                 <div id="task_investigation" class="col-sm-6 col-md-4">
                     <a href="{{url_for('data/project.ambiguous_autoimporter', type='ambiguous', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-cogs fa-4x"></i>
+                            <span class="fa fa-cogs fa-4x"></span>
                             <h3 class="margin-bottom-xs">Auto Import Ambiguous Tasks</h3> 
                         </div>
                     </a>
@@ -129,7 +129,7 @@
                 <div id="task_investigators" class="col-sm-6 col-md-4">
                     <a href="{{ url_for('data/project.investigators', short_name=project.short_name) }}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-users fa-4x"></i>
+                            <span class="fa fa-users fa-4x"></span>
                             <h3 class="margin-bottom-xs">Investigators</h3>
                         </div>
                     </a>
@@ -138,7 +138,7 @@
                 <div id="delete_project" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.delete', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-trash fa-4x"></i>
+                            <span class="fa fa-trash fa-4x"></span>
                             <h3 class="margin-bottom-xs">Delete Project</h3>
                         </div>
                     </a>
@@ -147,7 +147,7 @@
                 <div id="project_details" class="col-sm-6 col-md-4">
                     <a href="{{ url_for('project.update', short_name = project.short_name) }}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-file-text-o fa-4x"></i>
+                            <span class="fa fa-file-text-o fa-4x"></span>
                             <h3 class="margin-bottom-xs">Project Details</h3>
                         </div>
                     </a>
@@ -156,7 +156,7 @@
                 <div id="audit_logs" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.auditlog', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
-                            <i class="fa fa-calendar fa-4x"></i>
+                            <span class="fa fa-calendar fa-4x"></span>
                             <h3 class="margin-bottom-xs">Audit Logs</h3>
                         </div>
                     </a>
