--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -71,15 +71,6 @@
                     </a>
                 </div>
                 
-                <div id="investigate_tasks" class="col-sm-6 col-md-4">
-                    <a href="{{url_for('data/project.investigate', short_name=project.short_name)}}" rel="nofollow">
-                            <div class="well">
-                                    <span class="fa fa-search-o fa-4x"></span>
-                                    <h3 class="margin-bottom-xs">Investigate</h3>
-                            </div>
-                    </a>
-                </div>
-                
                 <div id="task_redundancy" class="col-sm-6 col-md-4">
                     <a href="{{url_for('project.task_n_answers', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
@@ -117,7 +108,7 @@
                 </div>
                 
                 
-                <div id="task_investigation" class="col-sm-6 col-md-4">
+                <div id="ambiguous_autoimporter" class="col-sm-6 col-md-4">
                     <a href="{{url_for('data/project.ambiguous_autoimporter', type='ambiguous', short_name=project.short_name)}}" rel="nofollow">
                         <div class="well">
                             <span class="fa fa-cogs fa-4x"></span>
