--- a/templates/stats/blglobal.html
+++ b/templates/stats/blglobal.html
@@ -180,7 +180,7 @@
                 <div class="row padding-bottom-sm">
                     <div class="col-xs-12">
                         <div class="white-rounded inset-shadow-white chart">
-                            <h4 class="text-center padding-bottom-sm">Percentage of Contributions per User</h4>
+                            <h4 class="text-center padding-bottom-sm">Percentage of Contributions per Authenticated User</h4>
                             <div id="contributions-per-user-chart">
                                 <canvas id="contributions-per-user" style="max-height:300px;"></canvas>
                             </div>
@@ -191,7 +191,7 @@
                 <div class="row padding-bottom-sm">
                     <div class="col-xs-12">
                         <div class="white-rounded inset-shadow-white chart">
-                            <h4 class="text-center padding-bottom-sm">Number of Active Days per User</h4>
+                            <h4 class="text-center padding-bottom-sm">Number of Active Days per Authenticated User</h4>
                             <div id="days-active-chart">
                                 <canvas id="days-active" style="max-height:300px;"></canvas>
                             </div>
