--- a/templates/projects/update_project.html
+++ b/templates/projects/update_project.html
@@ -87,7 +87,7 @@ You can use Markdown to format your description.", class="form-control hidden", 
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                     {{ form_helper.render_field(upload_imageset_form.image_set, class="form-control", visible='true',  accept=".zip") }}
                     <div role="group" class="pull-right vcenter ie-vcenter">
-                        {% if project.info.image_set %}<i class="fa fa-check-circle-o fa-2x margin-right-xs badge-success"></i>{% endif %}
+                        {% if project.info.image_set %}<i class="fa fa-check-circle-o fa-2x margin-right-xs badge-success-inverse"></i>{% endif %}
                         <button type="submit" name="btn" value="Upload Image Set" class="btn btn-success">Upload</button>
                     </div>
                 </fieldset>
@@ -98,7 +98,7 @@ You can use Markdown to format your description.", class="form-control hidden", 
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                     {{ form_helper.render_field(upload_video_form.video, class="form-control", visible='true',  accept=".mp4") }}
                     <div role="group" class="pull-right vcenter ie-vcenter">
-                        {% if project.info.video %}<i class="fa fa-check-circle-o fa-2x margin-right-xs badge-success"></i>{% endif %}
+                        {% if project.info.video %}<i class="fa fa-check-circle-o fa-2x margin-right-xs badge-success-inverse"></i>{% endif %}
                         <button type="submit" name="btn" value="Upload Video" class="btn btn-success">Upload</button>
                     </div>
                 </fieldset>
@@ -109,7 +109,7 @@ You can use Markdown to format your description.", class="form-control hidden", 
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                     {{ form_helper.render_field(upload_splash_form.splash, class="form-control", visible='true') }}
                     <div role="group" class="pull-right vcenter ie-vcenter">
-                        {% if project.info.splash %}<i class="fa fa-check-circle-o fa-2x margin-right-xs badge-success"></i>{% endif %}
+                        {% if project.info.splash %}<i class="fa fa-check-circle-o fa-2x margin-right-xs badge-success-inverse"></i>{% endif %}
                         <button type="submit" name="btn" value="Upload Splash" class="btn btn-success">Upload</button>
                     </div>
                 </fieldset>
