Fix progress tooltip in templates

--- a/templates/projects/snippets/worldcat_investigation.html
+++ b/templates/projects/snippets/worldcat_investigation.html
@@ -81,6 +81,7 @@
       success: function(pct) {
       	$("#progress").css("width", pct.toString() + "%");
         $("#progress").attr("title", pct.toString() + "% complete");
+	$("#progress").attr("data-original-title", pct.toString() + "% complete");
         $("#progress").tooltip({
             'placement': 'bottom'
         });
