--- a/templates/projects/snippets/convert-a-card-search.html
+++ b/templates/projects/snippets/convert-a-card-search.html
@@ -272,7 +272,8 @@ function loadUserProgress() {
     pybossa.userProgress('{{project.short_name}}').done(function(data) {
         var pct = Math.round((data.done * 100) / data.total);
         $("#progress").css("width", pct.toString() + "%");
-        $("#progress").attr("title", pct.toString() + "% completed!");
+        $("#progress").attr("title", pct.toString() + "% complete");
+	$("#progress").attr("data-original-title", pct.toString() + "% complete");
         $("#progress").tooltip({
             'placement': 'bottom'
         });
