--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -92,7 +92,7 @@
 
 {% macro show_project(project, active_cat, current_user, upload_method) %}
 <div class="project-item container container-padded">
-    <div class="row project-summary padding-bottom">
+    <div class="row project-summary">
         <div class="col-md-8 col-xs-12">
             <div class="white-rounded inset-shadow-white project-desc">
                 <div class="col-sm-6 col-xs-12 hidden-xs project-polaroid">
